removed more useless links

--- a/app/views/slack_users/show.html.erb
+++ b/app/views/slack_users/show.html.erb
@@ -96,6 +96,11 @@
       <strong>Locale:</strong>
       <%= @slack_user.locale %>
     </p>
+
+    <p>
+      <strong>Deleted:</strong>
+      <%= @slack_user.deleted %>
+    </p>
   </div>
 
 
