--- a/app/views/slack_users/show.html.erb
+++ b/app/views/slack_users/show.html.erb
@@ -174,6 +174,12 @@
       <strong>Skype:</strong>
       <%= @slack_user_profile.skype %>
     </p>
+
+    <p>
+      <strong>Avatar:</strong>
+      <%= @slack_user_profile.image_original %>
+    </p>
+
   </div>
 
 </div>
