--- a/app/views/slack_users/show.html.erb
+++ b/app/views/slack_users/show.html.erb
@@ -178,6 +178,8 @@
     <p>
       <strong>Avatar:</strong>
       <%= @slack_user_profile.image_original %>
+      <br>
+      <img src="<%= @slack_user_profile.image_original %>" style="width: 200.00px;">
     </p>
 
   </div>
