better link for link

--- a/app/views/slack_users/index.html.erb
+++ b/app/views/slack_users/index.html.erb
@@ -50,7 +50,7 @@
         <td><%= slack_user.is_app_user %></td>
         <td><%= slack_user.has_2fa %></td>
         <td><%= slack_user.locale %></td>
-        <td><%= link_to 'Show', slack_user %></td>
+        <td><%= link_to 'Show More!', slack_user %></td>
       </tr>
     <% end %>
   </tbody>
